--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,2 +1,4 @@
-<app-divider></app-divider>
-<app-placeholder [header]="false" [lines]="10"></app-placeholder>
+<app-divider>Placeholder Component</app-divider>
+<app-placeholder [lines]="7"></app-placeholder>
+
+<app-divider>Segment Component</app-divider>
