--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -2,3 +2,12 @@
 <app-placeholder [lines]="7"></app-placeholder>
 
 <app-divider>Segment Component</app-divider>
+<app-segment>
+  <header>
+    <i class="pdf file outline icon"></i>
+    No documents are listed for this customer.
+  </header>
+
+  <button class="ui primary button">Add Document</button>
+
+</app-segment>
